Atualização: removido 'massagens terapêuticas' e alterado ano de 2007 para 2008

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Consultório Arakaki - Fisioterapia, Acupuntura e Massagens | Jundiaí/SP</title>
-    <meta name="description" content="Consultório Arakaki oferece fisioterapia, acupuntura e massagens terapêuticas em Jundiaí/SP desde 2007. Agende sua consulta. Atendimento especializado com Kelly Arakaki." />
-    <meta name="keywords" content="fisioterapia, acupuntura, massagem, Jundiaí, Kelly Arakaki, consultório, terapia" />
+    <title>Consultório Arakaki - Fisioterapia e Acupuntura | Jundiaí/SP</title>
+    <meta name="description" content="Consultório Arakaki oferece fisioterapia e acupuntura em Jundiaí/SP desde 2008. Agende sua consulta. Atendimento especializado com Kelly Arakaki." />
+    <meta name="keywords" content="fisioterapia, acupuntura, Jundiaí, Kelly Arakaki, consultório, terapia" />
     <meta name="author" content="Consultório Arakaki" />
 
-    <meta property="og:title" content="Consultório Arakaki - Fisioterapia, Acupuntura e Massagens" />
-    <meta property="og:description" content="Cuidando da sua saúde desde 2007 com excelência em fisioterapia, acupuntura e massagens terapêuticas em Jundiaí/SP." />
+    <meta property="og:title" content="Consultório Arakaki - Fisioterapia e Acupuntura" />
+    <meta property="og:description" content="Cuidando da sua saúde desde 2008 com excelência em fisioterapia e acupuntura em Jundiaí/SP." />
     <meta property="og:type" content="website" />
 
     <meta name="twitter:card" content="summary_large_image" />
